<resources>
    <string name="app_name">Optimal distribution relational system</string>
    <string name="apple_watch">apple_watch</string>
    <string name="quantity">Quantity:</string>
    <string name="quant">quant</string>
    <string name="price">Price:</string>
    <string name="prices">price$</string>
    <string name="productimage">productimage</string>
    <string name="orders_today">Orders ToDay</string>
    <string name="loading">Loading...</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">AIzaSyDJBSJy6bMz5Z_5N89HqIeJTqDSM11W4jk</string>
    <string name="product">Product</string>
    <string name="description">Description</string>
    <string name="add">add</string>
    <string name="warehouse_manger">warehouse manger</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string name="product_type">Product type</string>
    <string name="code_warehouse">Code warehouse</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="required">required</string>
    <string name="select">Select</string>
    <string name="service">Service</string>
    <string name="add_product">Add Product</string>
    <string name="track_order">Track Order</string>
    <string name="signup">signup</string>
    <string name="user_name">user name</string>
    <string name="rating_your_trip">Rating your trip</string>
    <string name="lolgo">lolgo</string>
    <string name="rate_our_service">Rate our service</string>
    <string name="do_you_have_any_issue">DO YOU HAVE ANY ISSUE?</string>
    <string name="good">good</string>
    <string name="submite">submite</string>
    <string name="comments">COMMENTS!...</string>
    <string name="comment">COMMENT!..</string>
    <string name="thanks_for_rating_us">THANKS FOR RATING US</string>
    <string name="problem_will_be_taken_in_consideration">PROBLEM will be TAKEN in CONSIDERATION</string>
    <string name="stars">stars</string>
</resources>