<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_border"
    android:layout_weight="1"
    android:layout_margin="5dp"
    android:padding="5dp"
    >
    <ImageView
        android:id="@+id/produc_img"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/apple_watch"
        android:contentDescription="@string/productimage" />
    <TextView
        android:id="@+id/produc_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/produc_img"
        android:text="@string/apple_watch"
        android:textSize="15sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/produc_name"
        android:text="@string/quantity"
        android:textSize="15sp"
        android:textColor="#439A97"/>
    <TextView
        android:id="@+id/produc_quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/produc_name"
        android:layout_toEndOf="@id/quantity"
        android:text="@string/quant"
        android:textSize="15sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/quantity"
        android:text="@string/price"
        android:textSize="15sp"
        android:textColor="#439A97" />
    <TextView
        android:id="@+id/prod_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/produc_quant"
        android:layout_toEndOf="@id/price"
        android:text="@string/prices"
        android:textSize="15sp"
        android:textColor="#000000"/>
</RelativeLayout>
