<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    tools:context=".alaa.FinishedActivity">

    <ImageView
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/rate2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp"
        android:contentDescription="@string/stars"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="33sp"
        android:fontFamily="cursive"
        android:layout_gravity="center_horizontal"
        android:text="@string/thanks_for_rating_us"
        android:textColor="#439A97"
        />

    <TextView
        android:id="@+id/problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/problem_will_be_taken_in_consideration"
        android:textColor="#439A97"
        android:textSize="30sp" />
</LinearLayout>
