<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".amal.LoginWareHouseActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_to_continue"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_border"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/txt2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        android:hint="phone number"
        android:inputType="phone|number"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        android:hint="@string/location"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/product_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        android:hint="@string/product_type"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/location"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/code_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        android:hint="@string/code_warehouse"
        android:maxLines="1"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/product_type"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#439A97"
        android:text="@string/login"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_warehouse" />

</androidx.constraintlayout.widget.ConstraintLayout>