<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif"
        android:paddingRight="80dp"
        android:text="@string/select"
        android:textColor="#62B6B7"
        android:textSize="35dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:fontFamily="serif"
        android:text="@string/service"
        android:textColor="#439A97"
        android:textSize="35dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.532">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/assddsa" />

        <Button
            android:id="@+id/add"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/round_btn"
            android:backgroundTint="#62B6B7"
            android:insetLeft="30dp"
            android:insetTop="20dp"
            android:insetRight="40dp"
            android:insetBottom="10dp"
            android:onClick="onClick"
            android:text="@string/add_product"
            android:textColor="#fff"
            android:textSize="25sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/trrack" />

        <Button
            android:id="@+id/track"
            android:layout_width="300dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/round_btn"
            android:backgroundTint="#62B6B7"
            android:insetLeft="30dp"
            android:insetTop="20dp"
            android:insetRight="40dp"
            android:insetBottom="10dp"
            android:onClick="onClick"
            android:text="@string/track_order"
            android:textColor="#fff"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>